--- a/languages/go.org
+++ b/languages/go.org
@@ -1,19 +1,31 @@
-- https://talks.golang.org/2013/bestpractices.slide  Francesc Campoy Flores 
-- Write web applications in Go without using a framework
-  https://www.youtube.com/playlist?list=PL41psiCma00wgiTKkAZwJiwtLTdcyEyc4
-- https://www.youtube.com/playlist?list=PLJbE2Yu2zumCe9cO3SIyragJ8pLmVv0z9
+- https://talks.golang.org/2013/bestpractices.slide  Francesc Campoy Flores
 - flags custom arg http://blog.ralch.com/tutorial/golang-custom-flags/
 - SOCKS5 https://play.golang.org/p/l0iLtkD1DV (it also support HTTP_PROXY)
 - a set of vulnerable Golang programs https://github.com/trailofbits/not-going-anywhere
 - https://blog.golang.org/maps
-- Going Infinite, handling 1M websockets connections in Go
-  https://github.com/eranyanay/1m-go-websockets
-n- Source analysis of sync.Mutex in golang
+- Source analysis of sync.Mutex in golang
   https://programmer.group/source-analysis-of-sync.mutex-in-golang.html
 - sync.RWMutex
   https://medium.com/golangspec/sync-rwmutex-ca6c6c3208a0
-- https://github.com/guardrailsio/awesome-golang-security
-- https://github.com/parsiya/Hacking-with-Go
+* Videos
+- Going Infinite, handling 1 millions websockets connections in Go / Eran Yanay https://www.youtube.com/watch?v=LI1YTFMi8W4
+  https://github.com/eranyanay/1m-go-websockets
+- Make a chess program https://www.youtube.com/watch?v=zlPDWBLhn6c
+- Write web applications in Go without using a framework
+  https://www.youtube.com/playlist?list=PL41psiCma00wgiTKkAZwJiwtLTdcyEyc4
+- Tutorial: https://www.youtube.com/playlist?list=PLJbE2Yu2zumCe9cO3SIyragJ8pLmVv0z9
+- /r/golang/ favorite go conference talks https://www.reddit.com/r/golang/comments/ei54kv/what_are_your_favorite_go_conference_talks/
+- /r/golang/ youtube.com https://www.reddit.com/r/golang/search?q=site%3Ayoutube.com&restrict_sr=1&sort=top
+** Channels
+- Justforfunc https://www.youtube.com/c/JustForFunc/videos
+- Microservices: https://www.youtube.com/c/NicJackson/videos
+- The Go Programming Language https://www.youtube.com/c/golang/videos
+- Gopher Academy https://www.youtube.com/channel/UCx9QVEApa5BKLw9r8cnOFEA
+- GopherCon Europe https://www.youtube.com/channel/UCxm3-iHEMy7IkU0_gwDVGAQ
+- GopherCon UK https://www.youtube.com/channel/UC9ZNrGdT2aAdrNbX78lbNlQ
+- Gophercon Israel https://www.youtube.com/channel/UCV_ox3kVvV5HrUz4JOuZpdQ
+- Gophercon Russia https://www.youtube.com/channel/UCq-OB01F8YnS-FJpeJRCvMQ/videos
+- Singapore Gophers https://www.youtube.com/channel/UCazkIMpjghmT8fugD1WF_DQ
 * Personalities
 ** Rob Pike
 https://www.youtube.com/playlist?list=PL3NQHgGj2vtsJkK6ZyTzogNUTqe4nFSWd
@@ -24,46 +36,123 @@ https://www.youtube.com/playlist?list=PL3NQHgGj2vtsJkK6ZyTzogNUTqe4nFSWd
   - own abi
   - own file format
   - translated the C code of the compiler to Go using a "translator"
+** Dave Ceney
 * Learn
+- https://github.com/geektutu/7days-golang
+- https://github.com/astaxie/build-web-application-with-golang/blob/master/en/09.3.md
 - https://github.com/golang-standards/project-layout/
 - Learn Go Programming - Golang Tutorial for Beginners
   https://www.youtube.com/watch?v=YS4e4q9oBaU
+- https://github.com/guardrailsio/awesome-golang-security
 - https://github.com/Alikhll/golang-developer-roadmap
 - https://github.com/GoesToEleven/GolangTraining
 - https://github.com/SuperPaintman/the-evolution-of-a-go-programmer
 - https://github.com/ardanlabs/gotraining/tree/master/reading
 - https://github.com/dariubs/GoBooks
 - https://github.com/hoanhan101/ultimate-go
+  https://github.com/ardanlabs/gotraining-studyguide
 - https://github.com/inancgumus/learngo/
 - https://github.com/quii/learn-go-with-tests
 - https://github.com/re4lity/Hacking-With-Golang
+- https://github.com/parsiya/Hacking-with-Go
 - https://github.com/smallnest/go-best-practices
 - https://go101.org/article/tips.html#force-to-use-keyed-struct-literals
 - https://learnxinyminutes.com/docs/go/
 - Style
   https://github.com/dgryski/awesome-go-style lists of good practices
   https://github.com/golang/go/wiki/CodeReviewComment
+- Going Infinite, handling 1M websockets connections in Go
+  https://github.com/eranyanay/1m-go-websockets
 ** Interview questions
   https://github.com/shomali11/go-interview
   https://github.com/hoanhan101/algo
   https://github.com/goquiz/goquiz.github.io
-* Video: Practical Go: Real world advice for writing maintainable Go programs
-   https://www.youtube.com/watch?v=gi7t6Pl9rxE
-   https://dave.cheney.net/practical-go/presentations/qcon-china.html
-   - Avoid naming with type, or  ex:
-     - companiesMap map[string]*Company
-     - config Config* // c Config* or conf *Config
-     - config1 Config*, config2 Config* // original Config*, updated Config*
-     - context context.Context // ctx context.Context
-* Video: Will contracts replace interfaces? / Francesc Campoy
+* DONE Video: dotGo 2014 - John Graham-Cumming - I came for the easy concurrency I stayed for the easy composition
+- Problem: identify if site is cloudflare or not (check NS)
+  #+begin_src go
+type lookup struct {
+  name       string
+  err        error
+  cloudflare bool
+}
+  #+end_src
+- Problem: score exit tor nodes and score them on *Project Honeypot*
+  Reusing code above with interfaces.
+  With the ~factory pattern~.
+  #+begin_src go
+type factory interface {
+  make(line string) task
+}
+type task interface {
+  process()
+  print()
+}
+
+type lookupFactory struct {
+}
+func (f *lookupFactory) make(line string) task {
+  return &lookup{name: line}
+}
+
+type lookup struct {
+  name string
+  err error
+  cloudflare bool
+}
+func (l +lookup) process() {
+  nss, err := net.LookupNS(l.name)
+  if err != nil {
+    l.err = err
+  } else {
+    for _, ns := range nss {
+        if strings.HasSuffix(ns.Host, ".ns.cloudflare.com") {
+          l.cloudflare = true
+          break
+        }
+    }
+  }
+}
+  #+end_src
+* Video: Practical Go: Real world advice for writing maintainable Go programs / Dave Cheney (2019)
+  https://www.youtube.com/watch?v=gi7t6Pl9rxE
+  https://dave.cheney.net/practical-go/presentations/qcon-china.html
+- "Waterfall way of writting books" (how books are written?)
+- Bryan Cantrill talk about operative systems (LINK??)
+** Identifiers
+- Names have an *oversized* impact in go
+- consise
+  descriptive, on vars "how" is used not "what" it has, on methods "what" it does not "how"
+  predictable
+- DO not short already short names, like oid to just o
+- Avoid naming with:
+  | do NOT                           | instead                           |
+  |----------------------------------+-----------------------------------|
+  | companiesMap map[string]*Company | companies map[string]*Company     |
+  | config Config*                   | c Config* or conf *Config         |
+  | config1 Config*, config2 Config* | original Config*, updated Config* |
+  | context context.Context          | ctx context.Context               |
+- "a" and "b" are usually names given to variables that are going to be compared
+** Comments
+"Good code has a lot comments, bad code requires a lot of comments" -- Dave Thomas (on The Pragmatic Programmer)
+- Start writting the comment fo rthe function.
+  - If you found an *and* while writing the function, it is doing 2 things, and needs refactoring.
+- Comment exported symbols
+  - NOT implementation of an interface
+** Package Design
+- "Your one word elevator pitch word to define your package"
+- Unique (a name that needs a partner like, client and server, is likely not a good name)
+1:18:32
+* Video: Will contracts replace interfaces? / Francesc Campoy (2019)
   https://www.youtube.com/watch?v=E75b9kuyRKw
   - Go has 2 types, abstract or concrete.
   - Interfaces
     - Canonical examples of interfaces are Reader/Writer with Read/Write methods.
     - They create a "set" of types
       - Can define an "union" interface of those interfaces
+      - The ~empty interface~ interface{} "contains" all the types
     - You can translate some of the behaviour of something (an object in other languages)
-      to an interface with methods associated. Like a Stack which has Pop, Push, Empty methods.
+        to an interface with methods associated.
+      Like a Stack which has Pop, Push, Empty methods.
     - And then you have algoritms that can work with that interface.
     - However there are types that are not completely defined by JUST an interface. So it is
       kind of an incomplete idea.
@@ -73,20 +162,26 @@ https://www.youtube.com/playlist?list=PL3NQHgGj2vtsJkK6ZyTzogNUTqe4nFSWd
     of the interface are the interception points.
   - ~Implicit interface satisfaction~ no implements. Instead of import the type of the interface you can declare it
     locally. "give me something that can Eval() or Pop() ... etc"
-* Video: 7 common mistakes in Go and when to avoid them / Steve Francia
+* DONE Video: 7 common mistakes in Go and when to avoid them / Steve Francia (2015)
   https://www.youtube.com/watch?v=29LLRKIL_TI
   - Types can express State and Behavior
     - State = struct
     - Behavior = interface
-  - 1) Accept interfaces parameters
-  - 2) Use io.Reader, io.Writer
-  - 3) Do not abuse broader interfaces
-  - 4) Methods vs Functions
-       - functions do not depend of state or do not change, same input same output. Can accept interfaces
-       - method defines a behaviour of a type, depend of the state. Bound to a type.
-  - 5) pointer vs value
-  - 6) Custom error
-* Tutorial: Learn go with tests
+  - (Below are translated as DO)
+    1) Accept interfaces parameters:
+        Example: instead of translated a buffer to .Bytes()
+                 just send it and accept the interface as argument
+    2) Use io.Reader, io.Writer
+    3) Do not abuse broader interfaces, use the smaller for the job
+    4) Methods vs Functions
+       - functions do not depend of state or do not change it, same input same output.
+         Can accept interfaces
+       - method defines a behaviour of a type, depend of the state.
+         Bound to a type.
+    5) pointer vs value: shared access vs value copied
+    6) Custom error: implement the interface when needed
+    7) Know what is Safe and what is Unsafe
+* TODO Tutorial: Learn go with tests
 ** Hello world
 - Rules for "testing" package
   - files should be {file}_test.go
@@ -99,7 +194,7 @@ https://www.youtube.com/playlist?list=PL3NQHgGj2vtsJkK6ZyTzogNUTqe4nFSWd
 - functions naming:
   - public functions start with CAPITAL letter
   - private functions start with a lowercase letter
-* Tutorial: Effective Go
+   * TODO Tutorial: Effective Go
   https://golang.org/doc/effective_go.html
 - "go fmt" uses tabs
 - Unlike C, is OK return the address of a local variable (!
@@ -222,17 +317,159 @@ https://www.youtube.com/playlist?list=PL3NQHgGj2vtsJkK6ZyTzogNUTqe4nFSWd
       - Swap(i, j int)
 - Convertions
   - It's an idiom in Go programs to convert the type of an expression to access a different set of methods. 
-** Blank Identifier
-  - unused import AND variables
+** DONE Blank _ Identifier
+#+begin_src go
+_, err := os.Stat(path) // 1. on multiple assignment
+var _ = fmt.Println // 2. To silence, unused imports
+_ = fd              // 2. To silence, unsused variables
+import _ "net/http/pprof" // 3. To import for his side-effects
+// 4. to check at compile time that a type satisfies an interface
+//    Only when there are no static conversion already present in the code (rare).
+//    Global declaration.
+var _ json.Marshaler = (*RawMessage)(nil)
+#+end_src
+** Embedding
+- Interface embedding:
+  - Only interfaces can be embedded within interfaces
+* DONE Tutorial: Clean Go Code (Lasse Martin Jakobsen)
+https://github.com/Pungyeon/clean-go-article
+- AWS re:Invent 2017: Embracing Change without Breaking the World (DEV319) https://www.youtube.com/watch?v=kJq81Y7OEx4
+  Golang Scopes https://idiallo.com/blog/golang-scopes
+- Ensure readability, estability and maintainability of the codebase
+s topic, as well as a talk:
+- About choosing between a closure or an interface
+  https://dave.cheney.net/2016/11/13/do-not-fear-first-class-functions
+  https://www.youtube.com/watch?v=5buaPyJ0XeQ&t=9s
+  https://www.youtube.com/watch?v=5IKcPMJXkKs
+** Preface: Why Write Clean Code?
+> "We don't read code, we decode it -- Peter Siebel"
+- ...homogenous code id more important than having complete expressive *freedom*
+** Introduction to Clean Code
+- TDD: short dev cycles, invites to question *functionality* and *purpose*
+  1. Write (or execute) a test
+  2. If the test fails, make it pass
+  3. Refactor your code accordingly
+  4. Repeat
+*** Naming conventions
+  - Comments:
+    - goftm, all public variables and functions should be annotated
+    - "tutorial comments" are useless in production code
+    - "Document ~why~, not how -- Venkat Subramaniam (Agile advocate)"
+  - Functions:
+    - "The more specific the function, the more general its name"
+      Start with a very broad and short function name. Run() Parse()
+    - IMO, Part of the OO that is loss, (sometimes) is translated into names (less than in C tho)
+  - Variables:
+    - Opposite to functions: should be named from more to less specific, the deeper we go into nested scopes.
+    - Do NOT name your variables the same as the type
+      "You shouldn't name your variables after their types for the same reason you wouldn't name your pets 'dog' or 'cat' -- Dave Cheney"
+    - Do NOT mix short and long variable names inconsistently
+*** Cleaning Functions
+- Function length
+  "How small should a function be? Smaller than that! -- Robert C. Martin"
+  - Code comprehension > Code deduplication
+  - Avoid *Indentation hell*
+  - TIP: if the *value, err :=* pattern id repeated more than once in a function
+- Function Signatures
+  - IT should contain one or two input parameters. Might be three.
+  - Use and "Options" struct instead
+*** Variable Scope
+- Global variables are problematic and don't belong in clean code
+- Non-Global variables with a large scope can cause problems (too).
+  - Instead of expanding the mutable scope, we can just return a new value.
+  - Variable shadowing can creep when doing ~:=~ inside a block, that (re)declares the variable
+  - OK DUDE
+    "Developers need to take responsibility for their own code rather than blaming these issues on the variable
+     declaration syntax of a particular language like Go."
+*** Variable Declaration
+- Declare the variables as close to their usage as possible
+  - Avoid C-style declaration first
+- Make constructors for channels, that make() and start the consumption
+  - Alternatively
+    - wrap the channel in a struct, making the channel private
+    - make a newNAME()
+    - make a Send()
+** Clean Go
+*** Return Values
+- Returning defined errors
+  - Do NOT rely on the *magic string* provided on errors.New() to compare
+    Make it global (4Head)
+- Return default values.
+  Like a global empty struct of the type needed.
+- Returning Dynamic Errors
+  - When there context details to be returned
+  - Create a new interface:
     #+begin_src go
-   var _ = fmt.Println
-   _ = fd
+type ErrorDetails interface {
+  Error() string
+  Type()  string
+}
+
+type errDetails struct {
+  errtype error
+  details interface{}
+}
+func NewErrorDetails(err error, details ...interface{}) ErrorDetails {
+  return &errDetails{
+    errtype: er,
+    details: details,
+  }
+}
+func (err *errDetails) Error() string {
+  return fmt.Sprintf("%v: %v", err.errtype, err.details)
+}
+func (err *errDetails) Type() error {
+  return err.errtype
+}
+
+NewErrorDetails(
+  ErrItemNotFound,
+  fmt.Sprintf("could not find item with id: %s", id))
+.Error()
+.Type()
     #+end_src
-  - Import for side effects
+*** Nil Values
+- Try to not return nil values
+- Avoid access to potential unitialized values with getters
+*** Pointers in Go
+- Pointer mutability
+- Scope/Mutability:
+  - When passing pointers as an input parameter of a function,
+     we are expanding the scope of the variable whose data is being pointed to.
+  - Same with returning pointers, we leak scope.
+  - Common Go constructores are still fine
+    They keep the scope the same.
+*** Closures Are Function Pointers
+- We can use closure to partially overcome the lack of generics
+  - Making it easier to add functionality without affecting other parts of the code.
+  - Keeping the arguments of the closure small (1?) helps to decouple later
+- Sometimes there is a choice between using a closure or an interface
+*** Interfaces in Go
+- Java or C#, intefaces are explicit
+- In Go being implicit, it can be difficult to see which intefaces are implemented by a struct (aka ~contract fulfillment~)
+  - Resulting in interfaces with few methods (to make it easy to identify satisfying types)
+  - Or creating constructors that return an interface1, along with code to implement the interface1
+  - Or we can check by asserting that the interface is fullfilled
     #+begin_src go
-    import _ "net/http/pprof"
+   var _ io.Writer = &NullWriter{}
     #+end_src
-  - Interface checks
+  - Or interface embedding in a struct field.
+    "An interface method in Go is essentially a function pointer".
+    Embedded interfaces:
+    - are always public.
+    - You can partially overwrite interface methods
+    Some argue that interface embedding is good for mocking (implement just what you need for testing)
+- Struct embedding, helps introduce new functionality quickly (clean code)
+- You should be able to accept and *interface argument* but return a *specific type*
+TODO: NewDocument() is missing a user argument for NewMetadata
+*** The Empty interface{}
+Type reflection or Type Casting
+- An alternative developers use for the lack of *generics*
+  - A way to accept all the types for argument
+    - In print() family of functions
+    - Or in .Decode() (in json package)
+- In general avoid directly dealing with interface{},
+  write wrappers (Get, Put) for the type you want (like when using tinyKV package)
 * Book: Get Programming with Go (Manning)
 Code: https://github.com/nathany/get-programming-with-go
 ** 5 State and behavior
@@ -448,9 +685,367 @@ aka getters and setters
 - The unit of encapsulation is the ~package~
 - We encapsulate on a struct, even if it is ONE field
 ** 7 Interfaces
-- ~satisfied implicitly~ is a key feature of GO.
-  No need to write all interfaces it satisfy on the type.
-- are an ~abstract type~
+*** 7.1 Interfaces as contracts
+    Definitions: abstract type, implictly implemented
+    An interface is contract, of what the type can do.
+    Some cannot be expressed by the language and is detailed in the comments of the interface.
+~substitutability~ of a type that satisfies the interface for another.
+*** 7.2 Interface Types
+    Inteface embedding
+*** 7.3 Interface Satisfaction
+- <TYPE> "is a" <INTERFACE>, when type satisfies the interface
+- Only the methods revealed by the interface type may be called, even if the concrete type has others.
+- ~empty interface~ interface{}, we can assign it anything, but we can't do nothing with it directly (see shadowing)
+- I can create interfaces as I need them, some might refer to common properties (getter methods)
+- *Documenting and asserting* the relationship between a type and intefaces it satisfies
+  var _ io.Writer = (*bytes.Buffer)(nil)
+*** 7.4 Parsing Flags with flag.Value
+fmt.Sscanf - to read in put in format
+- flag.Value is an interface
+  #+begin_src go
+  package flag
+  type Value interface {
+      String()    string // value to stdout
+      Set(string) error  // stdin to value
+  }
+#+end_src
+- Satisfying it, 1) wraping it on a struct
+#+begin_src go
+type celsiusFlag struct { Celsius }
+
+func (f *celsiusFlag) Set(s string) error {...}
+
+func CelciusFlag(name string, value Celsius, usage string) *Celsius {
+    f := celsiusFlag{value}
+    flag.CommandLine.Var(&f, name, usage) // Adds the flag
+    return &f.Celsius
+}
+#+end_src
+*** 7.5 Interface Values
+The potential to *panic*
+- Two components:
+  - A concrete type (dynamic type)
+  - A value of that type (dynamic value)
+- Zero value for an interface is both nil, a ~nil interface value~
+  - restored when one assigns nil to the interface variabe
+- If the value is not comparable (slices, map) comparisons between interface values wil panic
+- makes an impact on *nil*, when passes as an argument it will go from nil interface to:
+  - The Type can be the interface one, while
+  - The Value is nil
+  - Which is != of a plain *nil*
+*** 7.6 Sorting with sort.Interface
+tabwriter.Write
+#+begin_src go
+package sort // provides inplace sorting
+type Interface interface {
+    Len() int
+    Less(i, j int) bool // i,j are indices
+    Swap(i, j int)
+}
+#+end_src
+- Satisfied by providing ALL the methods for the type to satisfy
+  #+begin_src go
+  type StringSlice []string
+  fun (p StringSlice) Len() { return len(p) }
+  #+end_src
+- A sort of a slice of pointers to struct runs faster (faster swap)
+  than a slice of structs.
+- To sort for each field of the struct,
+  I need to create separate types that satisfy the interface
+- sort.Reverse
+  it uses a non-exported type (reverse) that embeds sort.Interface and
+        changes the Less() by swapping the arguments
+- sort.Sort(sort.Reverse(byArtist(tracks)))
+- Custom sorts
+  - wrapping the tracks and a function to sort on a struct
+    then instantiation on the sort, where we define it with a *lambda*
+    #+begin_src go
+   sort.Sort(customSort{tracks, func(x, y *Track) book {
+       if x.Title != y.Title {
+         return x.Title < y.Title
+       }
+       if x.Year != y.Year {
+         return x.Year < y.Year
+       }
+       if x.Length != y.Length {
+         return x.Length < y.Length
+       }
+       return false
+   }})
+    #+end_src
+*** 7.7 The http.Handler Interface
+#+begin_src go
+package http
+
+type Handler interface {
+  ServeHTTP(w ResponseWriter, r *Request)
+}
+
+func ListenAndServe(addres string, h Handler) error
+#+end_src
+- To satisfy we create a type, which can or can't hold data
+  - We can switch on req.URL.Path on the ServeHTTP() method
+- ServMux() a server multiplexer, collects several handlers into one
+  - We register the handlers, *.Handle()* passing the path and the method to handle the path
+    Wrapped in http.HandlerFunc() which is a type conversion, of a type which is a function that satisfies http.Handler
+    an *adapter*
+- Or briefly, mux.HandleFunc(PATH, METHOD)
+- Or more briefly, use the DefaultServerMux
+- Each handle in a new goroutine
+*** 7.8 The error Interface
+- fmt.Errorf() calls errors.New()
+  - given every time it creates a new one, there no 2 errors ==
+#+begin_src go
+type error interface {
+  Error() string
+}
+#+end_src
+- syscall.Errno(2) creates a error of type syscall.Errno which satisfies Error()
+*** TODO 7.9 Example: Expression Evaluator
+*** 7.15 A few Words of Advice
+- "Interfaces are *only* needed when there are two or more
+   concrete types that must be dealt with ina uniform way."
+- Exception being when the interface and the (single only) type can't be on the same package.
+- ~ask only for what you need~, rule of thumb for interface design
+* Book: Network Programming with Go (nostarch)
+** Introduction
+- Writing network software using Go's *Asynchronous* features
+- Emphasis on security
+- TCP, UDP, Unix Socket
+  Application-level protocols (http, http/2, TLS)
+  Fob, JSON, protocol buffers, gRPC
+** 1 An Overview of Networked Systems
+*** Choosing a Network Topology
+- Organization of nodes in a network
+  * point-to-point: o-o
+  * daisy chain:    o-o-o-o, a series of point-to-point with "hops" between 2 separated nodes
+  * bus: common network link, common on wireless, everyone sees everything
+  * ring: was used on some fiber-optic deployments, single direction
+  * star: there is a central node, individual point-to-point connections
+  * mesh: every node is fully connected to every other node
+- Hybrid topologies are more common: star-ring, star-bus
+*** Bandwidth vs. Latency
+- CDN, Caching
+- Go's concurrency to minimize server-side blocking of the response.
+*** OSI: The Open Systems Interconnection Reference Model
+Software application
+7) Application (http)
+6) Presentation (encryption, decoding)
+5) Session (connection life cycle?)
+4) Transport (tcp, udp)
+3) Network (ip)
+2) Data Link/Logical link control/Media Access control (mac) (error correction, common in wireless)
+1) Physical (bit to electric/optical signal)
+Physical transmission media
+**** Payloads
+Payload=Message Body=SDU=Service Data Unit
+Layer4: TCP Payloads=Segments=Datagrams
+Layer3: IP Payloads=Packet
+Layer2: Frame (containing MAC and FCS, frame check sequence)
+*** The TCP/IP Model
+Software Application
+- Application (7,6,5) (http,ftp,smtp,dhcp,dns)
+- Transport (4)
+- Internet/Network (3) (ip,bgp,icmp,igmp,ipsec)
+- Link (2,1) (arp)
+Physical Transmission Media
+
+SLIP or PPP, were part of serial connections to the ISP.
+No link layer protocol.
+** 8 Writting HTTP Clients
+URL = Uniform Resourse Locator
+scheme://authority/path?query=abc&d=1#fragment
+- Methods
+  POST: for new data
+  PUT: for updates
+  PATCH: partial changes
+  CONNECT: to request an *HTTP tunneling*
+  TRACE: to echo what you send (test tampering?) (bad for XST)
+- Response codes:h
+  3XX-It needs further action from the client
+  4XX-Error with the request
+  5XX-Server side error
+  304 Not Modified, works with the ETag header
+  404 Not Found, sometimes as a ~glomar response~, not confirming or dening the resource exists or not
+  426 Upgrade Required, when it needs to update to TLS before accessing the resource
+- Versions:
+  HTTP/1.0: requires separate TCP connections for different requests
+  HTTP/1.1: ~keepalive~ allows different request in the same TCP connection
+  HTTP/2  : allows server to push resources to the client.
+- Go automatically consumes the Response headers, but leaves the body unread
+  until is consumed or the connection closed.
+- To reuse the connection you need to consume the body, which also happens when you .close() the body
+- Default HTTP client has no timeout.
+  context.WithTimeout()
+  context.WithCancel() - and usin a timer time.AfterFunc()
+- Disable reuse:
+  req.Close = true
+- Server must explicitly drain the request body before closing it.
+- MIME: Multipupose Internet Mail Extension
+  "mime/multipart" package
+  Allows to send "field data" (key-values) or "form field"
+  Sets a boundary for the date and sent on header Content-Type:
+** 9 Building HTTP Services
+- In Go, a webservice relies on:
+  - Handlers
+  - Middleware: changes the handlers behavior or perform aux tasks (logging, authentication or access control)
+  - Multiplexer
+- Client Timeouts:
+  IdleTimeout: control keepalive timeout
+  ReadHeaderTimeout:
+  ReadTimeout: time the client has to send both header and body
+  WriteTimeout: time it has the client to read the server reply
+- TLS
+  &http.Server{}.Serve()
+                .ServeTLS()
+*** Handlers
+  http.HandlerFunc(
+     func(w http.ResponseWrite, r *http.Request) {...})
+  - Usually we ignore any potential (response) write error
+    - We can keep track however of the frequency they occur.
+  - http.Server will close the request body, but it won't drain it
+    #+begin_src go
+    // Inside a Handler
+    defer func(r io.ReadCloser) {
+        _, _ = io.Copy(ioutil.Discard, r)
+        _    = r.Close()
+    }(r.Body)
+    #+end_src
+  - *html/template* package to escape HTML code
+- Testing with *net/http/httptest* package
+  httptest.NewRequest will panic instead of throwing an error
+      unlike http.NewRequest
+  httptest.NewRecorder returns a pointer to httptest.ResponseRecorder
+      use the .Result() methos to return a pointer to http.Response
+* Book: Distributed Services with Go (Pragmatic Bookshelf) Travis Jefferey
+Source: https://pragprog.com/titles/tjgo/distributed-services-with-go/
+- Author: Works at Confluence (kafka)
+  https://twitter.com/travisjeffery
+  https://travisjeffery.com/
+  https://github.com/travisjeffery/jocko/
+- Book uses code from Hashicorp's *Serf* and *Raft* packages
+  Studied from Consul source code.
+- "Designing data intense applications" by Martin Kleppman
+  Covers data structures and algorithms for distributed services, abstractly.
+** Chapter 1: Let's Go
+- On C, author was bugged by the lack of modules
+
+* DONE Article: I want off Mr. Golang's Wild Ride
+Source: https://fasterthanli.me/articles/i-want-off-mr-golangs-wild-ride
+- Lack of generics, makes problems impossible to model accurately,
+  falling back into ~reflection~
+- Default error handling is *wonky* (even with 3rd party that adds context or stacktraces)
+- DWARF: debugging information on shared libraries
+- "When you make something simple, you move complexity elsewhere"
+- GO and NodeJS handling of cross platform permissions is made up (on windows)
+  https://nodejs.org/api/fs.html#fs_class_fs_stats
+  - A call to Chmod() on windows just flips the windows readonly flag
+  - "A language with a more involved type system, and better designed libraries
+     could avoid that pitfall"
+- In Rust we get a ~Result<>~, so we don't get some invalid/unitialized/null
+  In Go is up to us to test the value of *err* returned by the function
+- In Rust we have a type Path, that can have non utf-8 contents
+  In Go we have strings, which are byte slices
+  - We might silenty fail to read some files, since some characters might be non-printable
+- Path separator on Go, can't distinguish between not having a path separator and having it
+  In rust having ~Option<>~ allow us to differentiate
+- "We can look at *what* we're manipulating just by looking at its type"
+- Types don't cost anything at runtime, everything ends up inlined anyway.
+- In rust permissions are not unix based, so they are more crossplatform (1 bit readonly)
+  - Unix type permissions are available on PermissionsExt
+- In go there are build constraints in comments
+  // +build: !windows
+- "The Go way is to half-ass things"
+- "The Go way is to patch things up until they sorta kinda work, in the name of simplicity."
+** Lots of little things
+- net/http, timeouts:
+  - request timeout VS whole connection timeouts
+  - Both don't account if the request has been accepted but no data has been send.
+    Might be important on POST request.
+  - https://github.com/getlantern/idletiming solves above
+  - left-pad incident https://qz.com/646467/how-one-programmer-broke-the-internet-by-deleting-a-tiny-piece-of-code/
+  - golang monotonic clock breaking change, time.Now returns 2 different values if called twice?
+    https://github.com/golang/go/issues/12914
+** Parting words
+"It constantly takes *power* away from its users, reserving it for itself."
+"It constantly lies about how complicated real-world systems are, and optimize for the *90%* case, ignoring correctness."
+"Everything looks simple on the surface, but nothing is."
+* DONE Article: Shrink your Go binaries with this one weird trick
+https://blog.filippo.io/shrink-your-go-binaries-with-this-one-weird-trick/
+- binwalk: can plot the entropy of a file to know how well it can compress
+  -E https://github.com/ReFirmLabs/binwalk/wiki/Usage#-e---entropy
+- executable packer
+  https://upx.github.io/
+  $ upx --brute FILENAME
+- removes the DWARF tables, nothe the annotations for stacktraces
+  $ GOOS=linux go build -ldflags="-s -w"
+* DONE Article: Go is not an easy language
+https://www.arp242.net/go-easy.html
+Simple syntax.
+Simple semantics.
+Doint useful stull is not always easy.
+Arg1: Some basic slice operations are complex. And some might be unintuite more costly.
+      Slice Tricks: https://github.com/golang/go/wiki/SliceTricks
+Arg2: While primitives are there, the patterns that put them together are up to us.
+* DONE Article: Channel Axioms (Dave Cheney)
+- A send      to a nil channel blocks forever
+- A receive from a nil channel blocks forever
+- A send      to a closed channel panics
+- A receive from a closed channel returns the zero value immediatly
+* DONE Article: Why Discord is switching from Go to Rust (Jesse Howarth?)
+- Uses: client video encoding, Elixir NIFs
+- Go Service to be rewritten:
+  - Every few minutes large latency/cpu spikes, due
+    1) it's memory model: memory is not freed immediatly
+    2) garbage collector: needs to scan the whole memory
+  - Go will force a garbage collection run every 2 minutes at minimum
+    https://github.com/golang/go/blob/895b7c85addfffe19b66d8ca71c31799d6e55990/src/runtime/proc.go#L4481-L4486
+  - Service did not borrow or free big ammounts of memory
+  - Data Structure: one instance per channel, per user
+    - LRU cache, millons of users in each cache
+      - Cassandra cluster backed
+- Memory managment in Rust: no gc, ownership means it will free it when no needed
+- Async Rust: at the time (<2020) async was only available on nightly
+- Implementation: it was a deep dive write performant (to their scale) code in Go
+  - Changing ot a BTreeMap instead of a HashMap
+  - Swapping to a metrics library that used concurrency
+* DONE Article: Go is Google's language, not ours (2019)
+- Claim: A community made package manager was dropped in favor of one made by the core team.
+  - https://peter.bourgon.org/blog/2018/07/27/a-response-about-dep-and-vgo.html
+    https://research.swtch.com/vgo
+* DONE Article: Ten Reasons Why I Don't Like Golang
+1) Using letter capitalization for private and public visibility.
+   Problem: Compiler can't identify class from variable name.
+            Constants are lowercase.
+   #+begin_src go
+   type user struct {
+   }
+   func main(){
+     var user *user
+     user = &user{} // panic!
+   }
+   #+end_src
+2) Structs implicity implement interfaces.
+   Problem: No guarantee that the "contract" (detailed on the comments of the interface)
+            is fullfilled.
+3) Uses multiple values to return errors.
+   Problem: easy to forget, nothing on the idiom enforces that the returned values are valid.
+4) Convention over configuration
+   Examples: somefile_linux.go, init()
+5) Easy to end up with several identically-named identifiers.
+6) Is difficult to autogenerate code (?)
+7) No Ternary Operator.
+8) Clumsy sort.Interface
+   Problem: boilerplate code increase with each new types you want to compare with little to no re-usability.
+            Casting also looks like a function call.
+9) No version or vendoring support (circa 2016)
+10) No generics.
+    Problem: 3rd party libraries (ab)use of interface{}
+11) append() "might" do an implace replacement, or not
+    Problem: compiler used to not warn for not assigning the append()
+* TODO Article: Down the Golang nil Rabbit Hole (2021)
+- Use case: doing integration test with https://github.com/houseabsolute/detest
+- Go has multiple "types" of nil. Both typed and untyped nil variables.
 * Language features
 ** slices
 - http://blog.golang.org/go-slices-usage-and-internals
